--- a/monitoramento/k8s-prometheus/prometheus-service.yaml
+++ b/monitoramento/k8s-prometheus/prometheus-service.yaml
@@ -4,13 +4,15 @@ metadata:
   name: prometheus-service
   namespace: monitoring
   annotations:
+      service.beta.kubernetes.io/aws-load-balancer-type: nlb
+      service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: 'true'
       prometheus.io/scrape: 'true'
       prometheus.io/port:   '9090'
   
 spec:
   selector: 
     app: prometheus-server
-  type: NodePort  
+  type: LoadBalancer  
   ports:
     - port: 8080
       targetPort: 9090 
